<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Login system</string>
    <string name="default_text">default text</string>
    <string name="reg_text">Регистрация</string>
    <string name="login_text">Вход</string>
    <string name="reg_name">Имя</string>
    <string name="reg_surname">Фамилия</string>
    <string name="reg_email">E-mail</string>
    <string name="reg_password">Пароль</string>
    <string name="reg_confirm_password">Подтвердите пароль</string>
    <string name="reg_button">Зарегистрироваться</string>
    <string name="login_button">Войти</string>
    <string name="or_text">или</string>
    <string name="empty_name">Введите имя</string>
    <string name="empty_surname">Введите фамилию</string>
    <string name="empty_email">Введите e-mail</string>
    <string name="empty_password">Введите пароль</string>
    <string name="confirm_password_error">Пароли должны совпадать</string>
    <string name="email_exist">Аккаунт с таким e-mail уже существует</string>
    <string name="user_added">Ваш аккаунт успешно создан</string>
    <string name="user_not_exist">Такой аккаунт не найден</string>
    <string name="pass_forgot"><u>Забыли пароль?</u></string>
    <string name="pass_change"><u>Изменить пароль</u></string>
    <string name="pass_change_empty_email">Введите e-mail аккаунта</string>
    <string name="pass_change_wrong_email">Нет аккаунта с таким e-mail</string>
    <string name="pass_change_update">Введите новый пароль</string>
    <string name="pass_change_update_done">Пароль успешно изменен</string>
    <string name="switch_text">Активировать режим суперагента</string>
    <string name="radio_group_text">Громкость</string>
    <string name="radio_1">тихо</string>
    <string name="radio_2">средне</string>
    <string name="radio_3">громко</string>
    <string name="rating_text">Как Вам приложение?</string>
    <string name="check_text">Отключить уведомления после 22:00</string>
</resources>
