<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAppActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_margin">

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerInside"
                android:src="@drawable/default_user_icon"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin"/>

            <TextView
                android:id="@+id/name_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <Switch
                android:id="@+id/switch_agent_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:text="@string/switch_text"
                android:textSize="@dimen/app_text_size"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/check_text"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:drawablePadding="@dimen/default_padding"
                android:textAllCaps="false"
                android:checked="true"
                android:textSize="@dimen/app_text_size"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/radio1"
                android:paddingLeft="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_group_text"
                    android:textSize="@dimen/app_text_size"
                    android:textColor="@color/black_color"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="@dimen/default_margin" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_1"
                    android:textSize="@dimen/app_text_size"/>

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_2"
                    android:textSize="@dimen/app_text_size"/>

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_3"
                    android:textSize="@dimen/app_text_size"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/rating_text"
                    android:textSize="@dimen/app_text_size"
                    android:textColor="@color/black_color"
                    />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    style="?android:attr/ratingBarStyleSmall"
                    android:clickable="true"
                    android:rating="4"
                    android:focusable="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>