<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/default_margin">

    <TextView
        android:id="@+id/registration_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/reg_text"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_reg"
        android:textColor="@color/reg_text_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/inp_reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_padding"
            android:drawablePadding="@dimen/default_padding"
            android:drawableStart="@drawable/icon_user_resize"
            android:drawableLeft="@drawable/icon_user_resize"
            android:backgroundTint="@color/reg_text_color"
            android:hint="@string/reg_name"
            android:textColorHint="@color/reg_text_color"
            android:textSize="@dimen/text_size_reg"
            android:textColor="@color/reg_text_color"/>

        <EditText
            android:id="@+id/inp_reg_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_padding"
            android:drawablePadding="@dimen/default_padding"
            android:drawableStart="@drawable/icon_user_resize"
            android:drawableLeft="@drawable/icon_user_resize"
            android:backgroundTint="@color/reg_text_color"
            android:hint="@string/reg_surname"
            android:textColorHint="@color/reg_text_color"
            android:textSize="@dimen/text_size_reg"
            android:textColor="@color/reg_text_color"/>

        <EditText
            android:id="@+id/inp_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_padding"
            android:drawablePadding="@dimen/default_padding"
            android:drawableStart="@drawable/icon_mail_resize"
            android:drawableLeft="@drawable/icon_mail_resize"
            android:backgroundTint="@color/reg_text_color"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/reg_text_color"
            android:textSize="@dimen/text_size_reg"
            android:textColor="@color/reg_text_color"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="0dp"
            android:textColor="@color/reg_text_color"
            android:textColorHint="@color/reg_text_color"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/reg_text_color"
            app:hintEnabled="false">

        <EditText
            android:id="@+id/inp_reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:drawablePadding="@dimen/default_padding"
            android:drawableStart="@drawable/icon_lock_resize"
            android:drawableLeft="@drawable/icon_lock_resize"
            android:backgroundTint="@color/reg_text_color"
            android:hint="@string/reg_password"
            android:layout_marginBottom="@dimen/default_padding"
            android:inputType="textPassword"
            android:textColorHint="@color/reg_text_color"
            android:textSize="@dimen/text_size_reg"
            android:textColor="@color/reg_text_color"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/reg_text_color"
            android:textColorHint="@color/reg_text_color"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/reg_text_color"
            app:hintEnabled="false">

        <EditText
            android:id="@+id/inp_reg_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_margin"
            android:drawablePadding="@dimen/default_padding"
            android:drawableStart="@drawable/icon_lock_resize"
            android:drawableLeft="@drawable/icon_lock_resize"
            android:backgroundTint="@color/reg_text_color"
            android:hint="@string/reg_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/reg_text_color"
            android:textSize="@dimen/text_size_reg"
            android:textColor="@color/reg_text_color"/>


    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sing_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/round_button"
            android:text="@string/reg_button"
            android:textColor="@color/buttons_text_color"
            android:textSize="@dimen/text_size_button"
            android:textAlignment="center"
            android:onClick="buttonClick" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/reg_text_color"
                android:layout_toLeftOf="@id/or_text"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/or_text" />

            <TextView
                android:id="@+id/or_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_text"
                android:textColor="@color/reg_text_color"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="@dimen/default_padding"
                android:layout_marginRight="@dimen/default_padding"
                android:layout_centerHorizontal="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/reg_text_color"
                android:layout_toRightOf="@id/or_text"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/or_text" />

        </RelativeLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/login_button"
            android:textColor="@color/buttons_text_color"
            android:textSize="@dimen/text_size_button"
            android:textAlignment="center"
            android:onClick="buttonClick"/>

    </LinearLayout>
</LinearLayout>
</android.support.constraint.ConstraintLayout>